# Remote-Repo

./: Add.h  Automaton.h  CMakeLists.txt  Colon.h  ColonDash.h  Comma.h  Comment.h  Facts.h  ID.h  Left_Paren.h  Lexer.cpp  Lexer.h  Multiply.h  Period.h  Q_Mark.h  Queries.h  Right_Paren.h  Rules.h  Schemes.h  String.h  Token.h  main.cpp
